Fix: Layout shift

--- a/ui/Cluster/Cluster.css
+++ b/ui/Cluster/Cluster.css
@@ -7,6 +7,7 @@
 
 .cluster-container {
   width: 100%;
+  height: 270px;
 }
 
 .cluster-container svg {
